# whh_fitting

./: .gitignore  fig5_digitized_supple.csv  fig5_digitized_ts1_supple.csv  fig5_flatten.csv  fit0924.ipynb  fit_kim2025.ipynb  pyproject.toml  whh.py  whh_function.py
